* search: update to 6.4.0,     !!! removed @Index(index, type), replaced with @Index(name) as multiple types per index is deprecated and will be removed in ES 7.0     switched to java high level client, which uses HTTP:9200     removed DeleteByQuery, as no actual usage for now, can be substituted by ForEach if needed